# spect-strip

./: Cargo.toml
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: main.rs
device/: Cargo.toml
device/src/: pair.rs
