[workspace]
members = [ "device", "cli" ]
default-members = [ "device" ]
resolver = "3"

[workspace.package]
edition      = "2024"
rust-version = "1.88"
version      = "0.1.0"

[workspace.dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embassy-futures = "0.1.2"
embassy-sync = "0.7.0"
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "unstable",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
trouble-host = { version = "0.5.0", features = ["gatt", "security", "dev-disable-csprng-seed-requirement"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
