[package]
name = "device"
edition.workspace = true
rust-version.workspace = true
version.workspace =  true

[[bin]]
name = "device"
path = "./src/bin/main.rs"

[dependencies]
esp-hal.workspace = true
esp-rtos.workspace = true
defmt.workspace = true
esp-bootloader-esp-idf.workspace = true
bt-hci.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
esp-alloc.workspace = true
esp-radio.workspace = true
panic-rtt-target.workspace = true
rtt-target.workspace = true
trouble-host.workspace = true
critical-section.workspace = true
static_cell.workspace = true
